# board/board_dto.go
@@ -4,10 +4,14 @@ import (
 	"github.com/WalkingMileageService/BMS/internal/model"
 )
 
+type BoardInfo struct {
+	Title   string `json:"title"`
+	Content string `json:"content"`
+	UserId  string `json:"userId"`
+}
+
 type Board struct {
-	Id       int64  `json:"id"`
-	Title    string `json:"title"`
-	Content  string `json:"content"`
-	UserId   string `json:"userId"`
-	BaseDate model.BaseDate
+	Id        int64 `json:"id"`
+	BoardInfo BoardInfo
+	BaseDate  model.BaseDate
 }
